--- a/Competency_3/Restaurant-site/index.html
+++ b/Competency_3/Restaurant-site/index.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <a href="menu.html">Menu Page</a>  <a href="Hiring.html">Now Hiring!!</a>
+    <link rel="icon" href="images/pizza.jpeg" type="image/jpeg" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Landing Page</title>
 </head>
 <body>
-$END$
+
+<div class="banner">
+    <img src="images/banner.png" alt="Pizza Bros Logo" width="400" height="400">
+</div>
+<div class="content">
+    <h1>Welcome to Pizza Bros</h1>
+    <p>
+        At Pizza Bros, we craft the perfect pizza with fresh ingredients, signature sauces, and a golden, crispy crust.
+        Join us for a cozy dine-in experience or order online to enjoy the best pizza in town right at your home!
+    </p>
+</div>
+
 </body>
 </html>
