--- a/Competency_3/Restaurant-site/menu.html
+++ b/Competency_3/Restaurant-site/menu.html
@@ -1,10 +1,57 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <a href="index.html">Main Page</a>  <a href="Hiring.html">Now Hiring!!</a>
+
+    <link rel="icon" href="images/pizza.jpeg" type="image/jpeg" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Menu</title>
 </head>
 <body>
-$END$
+<h2> Menu Items </h2>
+<table border="1" cellpadding="8" cellspacing="4" style = "margin: auto;">
+    <thead>
+    <tr>
+        <th>Item</th>
+        <th>Description</th>
+        <th>Price</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Meat Lovers Pizza</td>
+        <td>Pizza with Sausage, Pepperoni, Ham, Beef, Cheese & Sauce </td>
+        <td> $26.99</td>
+    </tr>
+    <tr>
+        <td>Classic Pizza</td>
+        <td>Cheese Pizza with Sauce</td>
+        <td> $20.99</td>
+    </tr>
+    <tr>
+        <td>Pepperoni Pizza</td>
+        <td>Pepperoni Pizza with Cheese & Sauce</td>
+        <td> $22.99</td>
+    </tr>
+    <tr>
+        <td>Meatball Sub</td>
+        <td>Hoogie Sandwich With Meatballs</td>
+        <td> $10.99</td>
+    </tr>
+    <tr>
+        <td>Calzone</td>
+        <td>Pepperoni and Cheese Calzone</td>
+        <td> $16.99</td>
+    </tr>
+
+
+
+    </tbody>
+
+
+</table>
+</style>
+
 </body>
 </html>
