--- a/Competency_3/Restaurant-site/menu.html
+++ b/Competency_3/Restaurant-site/menu.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <h2> Menu Items </h2>
-<table border="1" cellpadding="8" cellspacing="4" style = "margin: auto;">
+<table border="3" cellpadding="8" cellspacing="4">
     <thead>
     <tr>
         <th>Item</th>
