--- a/Capstone/index.html
+++ b/Capstone/index.html
@@ -26,7 +26,7 @@
                         Pizza Map
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="Hiring.html">Now Hiring!!</a></li>
+                        <li><a class="dropdown-item" href="hiring.html">Now Hiring!!</a></li>
                         <li><a class="dropdown-item" href="menu.html">Menu Page</a></li>
                     </ul>
                 </li>
