--- a/Capstone/menu.html
+++ b/Capstone/menu.html
@@ -13,7 +13,7 @@
 <body class="Menu">
 <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="homepage.html">
+        <a class="navbar-brand" href="index.html">
             <img src="images/pizza%20bros%20home%20page.jpeg" width="70" height="70" alt="Pizza logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,8 +25,8 @@
                         Pizza Map
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="homepage.html">Home Page</a></li>
-                        <li><a class="dropdown-item" href="Hiring.html">Now Hiring!!!</a></li>
+                        <li><a class="dropdown-item" href="index.html">Home Page</a></li>
+                        <li><a class="dropdown-item" href="hiring.html">Now Hiring!!!</a></li>
                     </ul>
                 </li>
             </ul>
